--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "node-osc":"*",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "serve-static": "^1.3.5",
+    "finalhandler":"*"
   }
 }
